fix: login page fixed

--- a/captive_portal/portal/templates/login.html
+++ b/captive_portal/portal/templates/login.html
@@ -8,6 +8,15 @@
 </head>
 <body class="portal-body">
   <div class="portal-wrapper">
+
+    <div class="portal-bg-orbits">
+      <div class="orbit orbit-1"></div>
+      <div class="orbit orbit-2"></div>
+      <div class="orbit orbit-3"></div>
+      <div class="orbit orbit-4"></div>
+    </div>
+
+
     <div class="portal-card">
       <div class="portal-header">
         <div class="portal-icon-circle">
